--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
         {
             "matches": ["https://*.twitch.tv/*"],
             "js": ["twitch-points-extension.js"],
-            "run_at": "document_start"
+            "run_at": "document_end"
         }
     ],
     "web_accessible_resources": [
