--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
         "128": "icons/128x-twitch-points-extension.png"
     },
     "background": {
-        "service_worker": "src/background.js"
+        "service_worker": "src/twitch-points-extension-background.js"
     },
     "content_scripts": [
         {
