--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
     "manifest_version": 3,
     "name": "Twitch Points",
     "description": "Extension which automatically claims Twitch points",
-    "version": "1.1",
+    "version": "1.2",
     "icons": {
-        "48": "icons/48x-twitch-points-extension.png",
-        "128": "icons/128x-twitch-points-extension.png"
+        "48": "src/icons/48x-twitch-points-extension.png",
+        "128": "src/icons/128x-twitch-points-extension.png"
     },
     "background": {
         "service_worker": "src/twitch-points-extension-background.js"
@@ -20,6 +20,8 @@
     "permissions": ["storage"],
     "action": {
         "default_popup": "src/twitch-points-extension.html",
-        "default_icon": "icons/twitch-points-extension.png"
+        "default_icon": {
+            "128": "src/icons/128x-twitch-points-extension.png"
+        }
     }
 }
