--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -16,5 +16,5 @@ jobs:
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.ref_name }}-build
+          name: twitch-points-extension-${{ github.ref_name }}-build
           path: build/
